src/css/app.scss
@import "reset";
@import "typography";
@import "animation";

@import url("https://use.typekit.net/iyk0rzd.css");


$primary-color: #F2F1EF;
$secondary-color: #fff;
$black-color: #000;
$select-color: rgba(0, 0, 0, 0.26);
$body-font: "neue-haas-grotesk-display";

$break-small: 500px;
$break-medium: 900px;


body {
    background-color: $primary-color;
    font-family: neue-haas-grotesk-display;
    font-size: 26px;
    font-weight: 400;
    letter-spacing: 1.75px;
    line-height: 1.225;
    height: 100%;
}

::selection {
    background: $select-color; /* WebKit/Blink Browsers */
  }
  ::-moz-selection {
    background: $select-color; /* Gecko Browsers */
  }

input:focus,
select:focus,
textarea:focus,
button:focus {
    outline: none;
}

img {
    -webkit-user-drag: none;
    -khtml-user-drag: none;
    -moz-user-drag: none;
    -o-user-drag: none;
    user-drag: none;

    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -o-user-select: none;
    user-select: none;
}

p {
    span {
        font-family: p22-mackinac-pro, serif;
        font-weight: 400;
        font-style: normal;
        letter-spacing: 0.6px;
    }
}

a {
    text-decoration: none;
}


header {
    z-index: 999;
    position: fixed;
    top: 0;
    right: 0;
    width: 100px;
    height: 100px;
    cursor: pointer;
    
    div.burger-menu {
        height: 30px;
        position: absolute;
        transition: transform 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
        transform: translate(-50%, 0%);

            /* @media screen and (max-width: $break-small) {
                position: fixed;
                right: 20px;
                top: 40px;
            } */

        div.burger-line {
            width: 30px;
            height: 2px;
            background-color: black;
        }

        .line-one {
            transform: rotate(-90deg);
        }

        .line-two {
            transform: translateY(-2px);
        }

    }

    div.burger-menu.active {
        transform: rotate(-45deg) translateY(-6px);
    }

}

div.menu {
    position: fixed;
    top: 0;
    right: 0;
    width: 50%;
    height: 100%;
    background-color: $secondary-color;
    transform: translateX(100%);
    transition: transform 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
    padding: 40px 40px 0 40px;
    overflow-y: scroll;
    overflow-x: hidden;
    z-index: 998;

    @media screen and (max-width: $break-medium) {
        width: 100vw;
      }


        div.container {
            display: flex;
            flex-direction: column;
            justify-content: space-between;
            height: 100%;

            div.menu-footer {
                padding: 40px 0;
                font-size: 18px;
                font-family: neue-haas-grotesk-display;
                font-weight: 500;
                letter-spacing: 0.5px;
                display: flex;
                justify-content: space-between;
                align-items: center;

                div.signature h4 span a img {
                    width: 26px;
                    height: 26px;
                }

            }
        }

    h2 {
        text-transform: uppercase;
        margin-bottom: 40px;
    }

    p {
        margin-bottom: 40px;

        span {
            font-family: p22-mackinac-pro, serif;
            font-weight: 400;
            font-style: normal;
            letter-spacing: 0.6px;
        }
    }

    form {
        margin-top: 80px;
        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
        padding-bottom: 20px;

        div {
            display: flex;
            justify-content: space-between;
        }

        h3 {
            text-transform: uppercase;
            margin-bottom: 40px;
        }

        input {
            border: none;
            max-width: 500px;
        }

        input::placeholder {
            color: rgba(0, 0, 0, 0.1);
        }

        button {
            width: 97px;
            height: 40px;
            background: #FFFFFF 0% 0% no-repeat padding-box;
            box-shadow: 0px 0px 10px #00000033;
            border-radius: 32px;
            opacity: 1;
            text-transform: uppercase;
            font-size: 14px;
            border: none;
            cursor: pointer;
            transition: all 0.3s ease;
        }

        button:hover {
            transform:translateY(-6px);
            box-shadow: 0 0 20px #00000033;
        }

    }
}

div.menu.open {
    transform: translateX(0);
}

main {


    section {
        position: fixed;
        width: 100vw;
        height: 100vh;
        display: flex;
        justify-content: center;
        align-items: center;


        div.logo-area {
            position: relative;
            /* width: 530px; */

            h1 {
                max-width: 530px;
                transition: opacity 0.2s ease;
                display: flex;
                overflow: hidden;
                padding: 20px;
                transition: padding 0.4s ease;
                align-items: center;

                @media screen and (max-width: $break-small) {
                    padding: 20px 60px;
                  } 

            }

            h1.logo {
                position: absolute;
                opacity: 1;
                transition: opacity 0.2s ease;
            }
            
            h1.logo-alt {
                opacity: 0;
                transition: opacity 0.2s ease;
            }

        }

        div.logo-area:hover {
            cursor: help;
        }

        div.logo-area:hover h1.logo {
            opacity: 0;
        }

        div.logo-area:hover h1.logo-alt {
            opacity: 1;
        }
        

    }

}

div.logo-interaction--mask {
    position: fixed;
    top: 50%;
    left: 50%;
    background-color: #fff;
    width: 530px;
    height: 130px;
    transform: translate(-50%, -50%);
    opacity: 0;
    cursor: help;
}

div.logo-area h1.main-logo span {
    transform: translateY(-154px);

    img {
        width: auto;
        height: auto;
    }
}

h1.logo span:nth-child(1),
h1.logo span:nth-child(2),
h1.logo span:nth-child(3),
h1.logo span:nth-child(4) {
    margin-right:5px;
}

div.stickers {
    position: fixed;
    top: 0;
    left: 0;

    height: 100vh;
    width: 100vw;
}

div.stickers img {
    position: absolute;
    transform: translate(-50%, -50%);
}

.blurred {
    -webkit-filter: blur(7px);
    transition: 0.3s filter ease;
    filter: blur(7px);
}

.blurred-title {
    -webkit-filter: blur(16px);
    transition: 0.3s filter ease;
    filter: blur(16px);
}

/* .sticker-slapped {
    animation: floating 8s ease-in-out infinite;
} */



footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    display: flex;
    align-items: center;
    flex-direction: column;
    font-size: 18px;
    font-weight: 500;
    padding: 40px 20px;
    letter-spacing: 1px;
    transform: translate3d(0, 100%, 0);
    transition: transform 1.2s cubic-bezier(.72,0,.01,1);

    h3 {
        text-transform: uppercase;
        display: block;
    }

    span a {
        color: $black-color;
        text-decoration: underline;
    }

}

footer.animated {
    transform: translate3d(0, 0%, 0);
}

div.click {
    position: fixed;
    top: -80px;
    left: -80px;
    height: 80px;
    width: 80px;
    background-color: #1d1d1b;
    color: $secondary-color;
    font-size: 12px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    transform: translate(-50%, -50%);
    cursor: none;
}

